--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "service-adapter",
-  "version": "0.1.3",
-  "description": "Micro Service Adapter",
+  "version": "0.2.0",
+  "description": "Micro Service Adapter - stream transform protocol",
   "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified\" && exit 0"
